--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,6 @@ phases:
 
       - docker build -t namespace/aws-test .
 
-      - docker tag aws-test:latest
+#      - docker tag aws-test:latest
 
       - echo Build completed on `date`
