--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
     commands:
       - echo Entered the post_build phase...
 
-      - docker build -t namespace/aws-test .
+      - docker build -t aws-test .
 
       - docker tag aws-test:latest 378582414855.dkr.ecr.us-east-1.amazonaws.com/aws_ecr_test:latest
 
