--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,6 +30,10 @@ phases:
     commands:
       - echo Entered the post_build phase...
 
+      - docker version
+
+      - docker info
+
       - docker build -t aws-test .
 
       - docker tag aws-test:latest 378582414855.dkr.ecr.eu-central-1.amazonaws.com/aws_ecr_test:latest
