--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,7 @@ phases:
     commands:
       - echo Entered the post_build phase...
 
-      - aws ecr get-login-password --region eu-central-1
+      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS  --password-stdin 378582414855.dkr.ecr.eu-central-1.amazonaws.com
 
       - docker build -t aws-test .
 
